Styling and func.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <h2>SMALLUI Demo</h2>
+        <span class="headbut">SMALLUI Demo</span>
     </header>
 
 <nav>
